<resources>
    <string name="app_name">Hrithik Roshan HD Wallpapers</string>
    <string name="action_settings">Settings</string>
    <string name="live_settings">Live Wallpaper Settings</string>
    <string name="rate_app">Rate This App :)</string>
    <string name="try_other_apps">Try Other Apps</string>
    <string name="action_rating">Rate Us</string>
    <string-array name="android_dropdown_arrays">
        <item>1 Minutes</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>5 Hours</item>
        <item>10 Hours</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>5 Days</item>
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>5 Weeks</item>

    </string-array>
    <string name="action_about">About</string>
    <string name="action_set_as_wallpaper">Set As Wallpaper</string>
    <string name="action_download">Download</string>
    <string name="action_share">Share</string>
    <string name="action_report">Report</string>
    <string name="icon_desc">Ad icon</string>
    <string name="image_desc">Ad image</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="wallpaper_description">Close</string>
    <string name="nav_drawer_recently_added">Recently Added</string>
    <string name="toast_saved">Wallpapaer saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpapaer updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="splash_error">Unable to download wallpapers. Verify your google\'s user name in settings or device doesn\'t have internet connection!</string>
    <string name="set_wallpaper">Set</string>
    <string name="download_wallpaper">Download</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">Sorry! Unable to fetch wallpaper(s). Verify app settings or device doesn\'t have internet connection.</string>
    <string name="toast_enter_google_username">Please enter google username</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="lbl_google_username">Google username</string>
    <string name="lbl_no_grid_columns">Number of grid columns</string>
    <string name="lbl_gallery_name">Gallery directory name</string>
    <string name="lbl_btn_save">Save</string>
    <string name="lbl_btn_clear_cache">Clear Cache</string>
    <string name="lbl_btn_cache_size">Show Cache Size</string>
    <string name="banner_ad_unit_id">ca-app-pub-6007058792756351/1410696894</string>

</resources>
