<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/txtGoogleUsername"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="2dp"
        android:inputType="text"
        android:singleLine="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_no_grid_columns"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/txtNoOfColumns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="20dp"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_gallery_name"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/txtGalleryName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="25dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/btn_rounded_corner"
        android:textColor="#fff"
        android:text="@string/lbl_btn_save"
        android:textSize="18dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnClearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_round_other"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/lbl_btn_clear_cache"
            android:textColor="#fff"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnCacheSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_round_other"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/lbl_btn_cache_size"
            android:textColor="#fff"
            android:textSize="18dp" />


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</LinearLayout>